syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/commonpb";
option java_multiple_files = true;
option java_package = "dev.multy.api.common";
option java_outer_classname = "MultyProto";

package dev.multy.common;

enum Location {
  UNKNOWN_LOCATION = 0;
  // N. Virginia
  US_EAST_1 = 1;
  // Ohio / Virginia
  US_EAST_2 = 2;
  // N. California / Washington
  US_WEST_1 = 3;
  // Oregon / Phoenix
  US_WEST_2 = 4;
  // Ireland
  EU_WEST_1 = 5;
  // England
  EU_WEST_2 = 6;
  // France
  EU_WEST_3 = 7;
  // Sweden
  EU_NORTH_1 = 8;
}

enum CloudProvider {
  UNKNOWN_PROVIDER = 0;
  AWS = 1;
  AZURE = 2;
}

message OperatingSystem {
  enum Enum {
    UNKNOWN_OS = 0;
    LINUX = 1;
  }
}

message DatabaseSize {
  enum Enum {
    UNKNOWN_VM_SIZE = 0;
    NANO = 1;
    MICRO = 2;
    MEDIUM = 3;
  }
}
message VmSize {
  enum Enum {
    UNKNOWN_VM_SIZE = 0;
    MICRO = 1;
    MEDIUM = 2;
    LARGE = 3;
  }
}


// Common messages for READ requests
message CommonResourceParameters {
  string resource_id = 1;
  string resource_group_id = 2;
  Location location = 3;
  CloudProvider cloud_provider = 4;
  bool needs_update = 5;
}

message CommonChildResourceParameters {
  string resource_id = 1;
  bool needs_update = 2;
}

// Common messages for CREATE and UPDATE requests
message ResourceCommonArgs {
  string resource_group_id = 1;
  Location location = 2;
  CloudProvider cloud_provider = 3;
}


message ChildResourceCommonArgs {
}

// Common messages for DELETE requests
message Empty {

}